2004-06-27  Remi Denis-Courmont

	* include/teredo.c:
	- allow unknown Teredo address flags, as specified per new draft 02,
	* src/relay.cpp, src/server_pkt.cpp:
	- check that destination matches 2000:/3 before transmitting,
	- set IPv6 source correctly in server Router Advertisements,
	* libtun6/ipv6-tunnel.cpp, libtun6/ipv6-tunnel.h:
	- sanity checks,
	- fix byte ordering for sending/receiving packets on FreeBSD,
	- separated from Miredo's own sources.

2004-06-26  Remi Denis-Courmont

	* miredo.8, Makefile.am:
	- initial man page,
	* src/miredo.cpp, src/relay.cpp:
	- removed useless memory checks (the program will be killed if we run
	  out of memory anyway),
	- check that server primary IPv4 address is a global unicast one.

2004-06-25  Remi Denis-Courmont

	* src/ipv6-tunnnel.cpp:
	- compile fix for broken pre-08-2003 Kame implementations,
	- fixed support for adding/deleting tunnel addresses on FreeBSD.

2004-05-24  Remi Denis-Courmont

	* src/ipv6-tunnel.cpp:
	- support for FreeBSD tunneling driver (still a stupid compilation
	  error, routing change not implemented).

2004-05-20  Remi Denis-Courmont

	* configure.ac, src/*:
	- FreeBSD compilation fixes, except tunneling driver.
	* src/main.cpp, src/ipv6-tunnel.cpp, src/miredo.cpp:
	- removed useless option to specify tunnel device file,
	- automatically add a route to the tunnel for the Teredo prefix.

2004-05-19  Remi Denis-Courmont

	* src/main.cpp, src/miredo.cpp:
	- automatic interface addres configuration,
	- properly drop additionnal POSIX groups.

2004-05-17  Remi Denis-Courmont

	* src/miredo.cpp, src/ipv6-tunnel.cpp:
	- set Teredo interface MTU to 1280 bytes,
	- setup Teredo interface address,
	- support for changing Teredo's prefix,
	- detach in the background.

2004-05-15  Remi Denis-Courmont

	* src/main.c, src/miredo.cpp:
	- support for changing Teredo relay/client port,
	- automatic relay IPv4 address selection.

2004-05-14  Remi Denis-Courmont

	* src/main.c, configure.ac: